# HeadGamer

./: .gitignore  .gitmodules  CMakeLists.txt  HeadGamer.pro  KeyboardHandler.cpp  KeyboardHandler.hpp  MainWindow.cpp  MainWindow.hpp  Mouse4DirectionsHandler.cpp  Mouse4DirectionsHandler.hpp  MouseActionHandler.cpp  MouseActionHandler.hpp  MouseHookHandler.cpp  MouseHookHandler.hpp  MouseInfo.cpp  MouseInfo.hpp  Presets.cpp  README.md  Settings.cpp  Settings.hpp  Types.cpp  Types.hpp  Utils.cpp  Utils.hpp  VirtualKeys.hpp  WindowActionConfig.cpp  WindowActionConfig.hpp  main.cpp
UI/: ComboBoxDelegate.cpp  ComboBoxDelegate.hpp  DirectionButton.cpp  DirectionButton.hpp  DirectionWidget.cpp  DirectionWidget.hpp  MainWindow.ui  WindowActionWidget.cpp  WindowActionWidget.hpp  WindowConfigForm.cpp  WindowConfigForm.hpp  WindowConfigForm.ui  WindowConfigItem.cpp  WindowConfigItem.hpp  WindowConfigItem.ui
action/: ActionBase.cpp  ActionBase.hpp  IAction.hpp  KeyPressAction.cpp  KeyPressAction.hpp  MacroAction.cpp
src/: CMakeLists.txt  main.cpp
src/UI/: CMakeLists.txt  ComboBoxDelegate.cpp  DirectionButton.cpp  DirectionWidget.cpp  MainWindow.cpp  MainWindow.ui  MouseInfo.cpp  MouseInfo.ui  WindowActionWidget.cpp  WindowConfigForm.cpp  WindowConfigForm.ui  WindowConfigItem.cpp  WindowConfigItem.ui
src/UI/include/UI/: DirectionWidget.hpp  MainWindow.hpp  WindowActionWidget.hpp  WindowConfigForm.hpp  WindowConfigItem.hpp
src/action/: ActionBase.cpp  CMakeLists.txt  KeyPressAction.cpp  MacroAction.cpp  StopAction.cpp  StopEvent.cpp  WindowActionConfig.cpp  WindowActionConfigList.cpp
src/action/include/action/: ActionBase.hpp  IAction.hpp  KeyPressAction.hpp  MacroAction.hpp  StopAction.hpp  StopEvent.hpp  WindowActionConfig.hpp  WindowActionConfigList.hpp
src/common/: CMakeLists.txt  Types.cpp  Utils.cpp
src/common/include/common/: IJson.hpp  Types.hpp  Utils.hpp
src/hook/: CMakeLists.txt  HookHandler.cpp
src/hook/include/hook/: HookHandler.hpp
src/keyboard/: CMakeLists.txt  KeyboardHandler.cpp
src/keyboard/include/keyboard/: KeyboardHandler.hpp
src/mouse/: CMakeLists.txt  Mouse4DirectionsHandler.cpp  MouseActionHandler.cpp  MouseHookHandler.cpp
src/mouse/include/mouse/: Mouse4DirectionsHandler.hpp  MouseActionHandler.hpp
src/settings/: CMakeLists.txt  Presets.cpp  Settings.cpp
src/settings/include/settings/: Presets.hpp  Settings.hpp
